<resources>
    <string name="app_name">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="options_item1">Item1</string>
    <string name="options_item2">Item2</string>
    <string name="options_item3">Item3</string>

    <string name="navmenu_item1">Item1</string>
    <string name="navmenu_item2">Item2</string>
    <string name="navmenu_item3">Item3</string>
    <string name="navmenu_item4">Item4</string>
    <string name="navmenu_item5">Item5</string>
    <string name="navmenu_group">Group</string>

    <string name="context_menu">Context Menu</string>
    <string name="context_item1">Item1</string>
    <string name="context_item2">Item2</string>
    <string name="context_item3">Item3</string>

    <string name="popup_menu">Popup Menu</string>
    <string name="popup_item1">Item1</string>
    <string name="popup_item2">Item2</string>
    <string name="popup_item3">Item3</string>
</resources>