<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navmenu_item1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navmenu_item2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navmenu_item3" />
    </group>

    <item android:title="@string/navmenu_group">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_item4" android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/navmenu_item4" />
                <item android:id="@+id/nav_item5" android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/navmenu_item5" />
            </group>
        </menu>
    </item>
</menu>