<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_item1">

    <fragment
        android:id="@+id/nav_item1"
        android:name="com.example.menu.ui.item1.Item1Fragment"
        android:label="@string/navmenu_item1"
        tools:layout="@layout/fragment_item1" />

    <fragment
        android:id="@+id/nav_item2"
        android:name="com.example.menu.ui.item2.Item2Fragment"
        android:label="@string/navmenu_item2"
        tools:layout="@layout/fragment_item2" />

    <fragment
        android:id="@+id/nav_item3"
        android:name="com.example.menu.ui.item3.Item3Fragment"
        android:label="@string/navmenu_item3"
        tools:layout="@layout/fragment_item3" />
</navigation>